[project]
name = "sae-shap"
version = "0.1.0"
description = ""
authors = [
    {name = "Itsuki Kuwahara",email = "248c117c@stu.kobe-u.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shap (>=0.50.0,<0.51.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "japanize-matplotlib (>=1.1.3,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
